Review Request 10633 see PLS-4021, PLS-4071 - fixed some layout issues - removed old stub data code from talking points preview object - moved some css around to make it more accessible

--- a/le-ui/projects/leadprioritization/app/cgtalkingpoint/cgtalkingpoint.scss
+++ b/le-ui/projects/leadprioritization/app/cgtalkingpoint/cgtalkingpoint.scss
@@ -25,7 +25,7 @@
             position: absolute;
             left: 340px;
             top: 0;
-            bottom: 0;
+            height: 45px;
             & > li {
                 @include flex-item(0 1 auto);
                 margin: 0 10px;
